--- a/css/style.css
+++ b/css/style.css
@@ -153,19 +153,29 @@ body,
   align-items: center;
 }
 .card {
+  position: relative;
+  top: -50px;
   background-color: #fff;
-  width: 80%;
-  max-width: 375px;
+  width: 90%;
+  max-width: 400px;
   border-radius: 10px;
-  padding: 20px;
+  padding: 10px;
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
   -ms-border-radius: 10px;
   -o-border-radius: 10px;
 }
-.card-body {
-  padding: 0 20px;
+@media screen and (min-width: 500px) {
+  .card {
+    top: 0;
+    width: 80%;
+    padding: 10px;
+  }
+  .card-body {
+    padding: 0 20px;
+  }
 }
+
 header {
   border-bottom: 1px solid rgb(239 239 239);
   padding-bottom: 10px;
