change background of wrapper

--- a/css/style.css
+++ b/css/style.css
@@ -136,17 +136,19 @@ body,
 .wrapper {
   width: 100%;
   height: 100vh;
-  background: #06beb6; /* fallback for old browsers */
+  /* background: #06beb6; 
   background: -webkit-linear-gradient(
     to right,
     #48b1bf,
     #06beb6
-  ); /* Chrome 10-25, Safari 5.1-6 */
+  ); 
   background: linear-gradient(
     to right,
     #48b1bf,
     #06beb6
-  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  );  */
+  background: linear-gradient(to right, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.6)),
+    url("../assets/images/city.jpg");
 
   display: flex;
   justify-content: center;
